# ChangeLog for media-libs/freetype
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.205 2009/01/06 19:09:04 dirtyepic Exp $

  06 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
  Remove myself from metadata.xml. It's actively maintained now and any
  changes I'm responsible for have been in the tree now for ages.

*freetype-2.3.7-r1 (01 Jan 2009)

  01 Jan 2009; Peter Alfredsen <loki_val@gentoo.org>
  +files/freetype-2.3.7-b.g.o-247104.patch,
  +files/freetype-2.3.7-b.g.o-253029.patch,
  +files/freetype-2.3.7-fix-incorrect-scaling.patch,
  +files/freetype-2.3.7-no-segfault-on-load_mac_face.patch,
  +freetype-2.3.7-r1.ebuild:
  Fix bug 247104, segfault in cffparse.c:361, bug 253029, missing letters in
  certain fonts, thanks to Andreas Turriff for the patch-pointer. Also
  import patches for alien bugs: http://bugs.debian.org/487101, segfault
  when building certain fonts and
  http://savannah.nongnu.org/bugs/index.php?23973 , incorrect scaling of
  certain fonts.

  20 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  -files/freetype-1.3.1-malloc.patch,
  -files/freetype-2.1.10-fix_synth.patch,
  -files/freetype-2.1.10-internal_header.patch,
  -files/freetype-2.1.10-revert_pointer.patch,
  -files/freetype-2.3.2-bdflib.patch,
  -files/freetype-2.3.5-crossbuild.patch,
  -files/freetype-2.3.6-incorect-font-scaling.patch:
  Punt patches

  20 Dec 2008; Peter Alfredsen <loki_val@gentoo.org>
  -freetype-1.3.1-r5.ebuild, -freetype-1.4_pre20080316.ebuild,
  -freetype-2.1.10-r3.ebuild, -freetype-2.3.5-r2.ebuild,
  -freetype-2.3.6.ebuild, -freetype-2.3.6-r1.ebuild:
  Punt old

  08 Jul 2008; Raúl Porcel <armin76@gentoo.org>
  freetype-1.4_pre20080316-r1.ebuild:
  alpha/ia64 stable wrt #225851

  07 Jul 2008; Jeroen Roovers <jer@gentoo.org>
  freetype-1.4_pre20080316-r1.ebuild:
  Stable for HPPA (bug #225851).

  07 Jul 2008; Markus Meier <maekke@gentoo.org>