@@ -5,9 +5,13 @@ AUX freetype-2.3.7-b.g.o-253029.patch 832 RMD160 f3cce5012bf09031c2986430329f19a
 AUX freetype-2.3.7-fix-incorrect-scaling.patch 838 RMD160 043ed17b28a7716c75c15dff36c1bead2e99bd36 SHA1 8f58f81b63f90c2e2a33cc69b6b1f64de6b6a8aa SHA256 4c0a4a4f4ad9ac482534c96531e6df083c18f834e6c1e1c153456b651078c608
 AUX freetype-2.3.7-no-segfault-on-load_mac_face.patch 1359 RMD160 9acd20df42c1cd630a7212ddbd8642693277812a SHA1 42e74bf882de8b9ee27e058257057ef488f0e989 SHA256 3a0b0115428b49a10f8adfdc5804ec6604a97ce7dc5bcf37978f2f935eefa697
 DIST freetype-2.3.7.tar.bz2 1310542 RMD160 7333507c5f42d451bf0541f007fe44165f090418 SHA1 f16f849d6e739ce8842008586af36371a32ac064 SHA256 4ecf879eb69fc323669981f02aebff1e3045de415303e86ee67f2080cb3ee888
+DIST freetype-2.3.8.tar.bz2 1343318 RMD160 e460e8a3aed21727973ac4add4ac8be70ac18534 SHA1 0a15d4498139c6743c0ea388c40aaf40cafd4f44 SHA256 8acd37c9160a5bdbe73ba925a4e534a5b6d164d95edd0335191c015aea5351e6
 DIST freetype-doc-2.3.7.tar.bz2 98646 RMD160 a4a0c92bb85ea9db9cc822a03c6bdbefff1037f9 SHA1 852918fc87dc2a8a8d7fac03ed3ee9750d695bab SHA256 1d57e0b35ecc37828b6326580cb944fa1408b97d16dbbd26d344c48e47222d20
+DIST freetype-doc-2.3.8.tar.bz2 98607 RMD160 751f5731e3cc9cabb7627a16ced338bffb28ceae SHA1 76d76ecb4aa7ec0d5a4b34a94a316ada651e9ef1 SHA256 bdd3ef54341b3b828b9853a7ae9e13ac4f81a3cdc63c2276660a3a6f49dc8273
 DIST ft2demos-2.3.7.tar.bz2 158328 RMD160 a68483711d1ef1867361fe7f74745df982cdbf09 SHA1 e7c7f2a2077b055d0ad11bdc90bc2ebd0d879b5e SHA256 944f0d24df4706c8a077c5d184a42822aaa0a2fbb8b67abe7c0d6920317cd499
+DIST ft2demos-2.3.8.tar.bz2 158715 RMD160 2c16c5450772364fa03eae90fabfefa835ebb3ae SHA1 1c75b11988eab25136bcb9846b6bee60d5e4f87b SHA256 a07ed7f965b98eb915e19a9401955b6bf5af267f6e53b3a28801516f94b32a12
 EBUILD freetype-2.3.7-r1.ebuild 3529 RMD160 bcc43c3fc864ee2d759202b1a4f24541856a2d38 SHA1 24c163a7fd636250da117a45e60d33f7231dadb7 SHA256 7a30699b9c8802b7db49a3d480731f718d045f1040887a0db32abad043731877
 EBUILD freetype-2.3.7.ebuild 3247 RMD160 86a21ede96fd101c4a8c068f6b01f76d5dbcf296 SHA1 7e01d28fe796333bc9ae843396038bd526ac739e SHA256 e80de4e32c9e15320751fcb1c1bb566369bffaf7497673d12fab4117d9df34c4
-MISC ChangeLog 31903 RMD160 aff2e8620a6bf78569d8445fa25a99e0637c0806 SHA1 88d7fa58053cf07df33bed35840ecced13245623 SHA256 71efc03954dbde234dff8db017f6a85488e935fbf71c8a95b939619852e89730
-MISC metadata.xml 325 RMD160 b4e6dc2ef370ca885a8ef26524f8ad8c43caf7e4 SHA1 5eddae91b249e8622ed4be2fcbcfc532eea7a18f SHA256 adaa2f99dadc64d142ae3e7d6b3ddabec3f3492ad99377010f7b1f5e0807fd9e
+EBUILD freetype-2.3.8.ebuild 3664 RMD160 4c1f1396f0d3928900fcd6c2ffe02fb8d358abaf SHA1 326eaadf0bd1b8ca2be74d621a276bf2082ef77d SHA256 dd8c2f07656a67f38a9f6ce1820c7c4c8ccd5601d92424d621333a71c2cd30d3
+MISC ChangeLog 32084 RMD160 e0907c42e27ce1a965091cdf764f9acc01041b22 SHA1 a11ac8f35cff2f446103702697a7ed0af41e71da SHA256 206149c1f31c02de83466776122a7446ba58f76e1d78bd1585c67c58ab8044fd
+MISC metadata.xml 484 RMD160 e5cd827ad55a4ffce76f3020ac8ad92e32d152f2 SHA1 d397ad9dc4984f010b4e191bfd0a5f226282010f SHA256 b6cbbcc2408efea4b28a4715a2862e77394c6f33c8f0b2f0a087e890fc4880b2
