@@ -1,6 +1,12 @@
 # ChangeLog for media-libs/freetype
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.205 2009/01/06 19:09:04 dirtyepic Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-libs/freetype/ChangeLog,v 1.206 2009/01/21 16:06:10 pva Exp $
+
+*freetype-2.3.8 (21 Jan 2009)
+
+  21 Jan 2009; Peter Volkov <pva@gentoo.org> metadata.xml,
+  +freetype-2.3.8.ebuild:
+  Version bump. Added fontforge USE flag to install internal headers.
 
   06 Jan 2009; Ryan Hill <dirtyepic@gentoo.org> metadata.xml:
   Remove myself from metadata.xml. It's actively maintained now and any
